--- a/source/_posts/24.12.md
+++ b/source/_posts/24.12.md
@@ -6,7 +6,7 @@ categories:
 ---
 
 ## 24.12.19
-싸피 탈. 긍적적으로 생각하자. 구미까지 왔다갔다하는 시간아낀것. 지원금 월 100만? 내 미래소득
+싸피 탈. 긍적적으로 생각하자. 구미까지 왔다갔다하는 시간아낀것.
 
 ## 24.10.27
 왜 금일 현대캐피탈 코딩테스트에서 미흡하였나?
